# AINFT-baby-shark-projects

./: .env.sample  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  start.sh
data/: brooklyn.json  shark_family.json  william.json
src/: config.py  enums.py  event_handlers.py  main.py  schemas.py
src/api/: __init__.py
src/api/v1/: __init__.py  bot.py  chat.py
