[tool.black]
line-length = 119
target-version = ['py39']

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true

line_length = 119
lines_after_imports = 2
multi_line_output = 3
use_parentheses = true


[tool.poetry]
name = "AINFT-baby-shark-projects"
version = "0.1.0"
description = ""
authors = ["YoungJae Kim <byeongal@comcom.ai>", "DongHoon Baek <baek@comcom.ai>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
ain-py = "^1.0.0"
aiodns = "^3.0.0"
brotli = "^1.0.9"
cchardet = "^2.1.7"
fastapi = "^0.92.0"
loguru = "^0.6.0"
requests = "^2.28.2"
uvicorn = "^0.20.0"

[tool.poetry.dev-dependencies]
black = "^23.1.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
pre-commit = "^3.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"